# Edge-AI-Camera

./: .gitignore  .rules.verible_lint  Makefile  README.md
.github/workflows/: rtl-ci.yml  video-ci.yml
hardware/: CMakeLists.txt
hardware/rtl/: line_buffer.v  sobel_filter.v
hardware/sim/: tb_sobel.cpp  tb_video.cpp
